WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198075
The cost of WebViewImpl::hasMarkedTextWithCompletionHandler should not increase with document size
https://bugs.webkit.org/show_bug.cgi?id=198075
Summary
The cost of WebViewImpl::hasMarkedTextWithCompletionHandler should not increa...
Wenson Hsieh
Reported
2019-05-21 10:02:56 PDT
<
rdar://problem/37560103
>
Attachments
Patch
(7.01 KB, patch)
2019-05-21 11:52 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(7.00 KB, patch)
2019-05-21 12:52 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-05-21 11:52:54 PDT
Comment hidden (obsolete)
Created
attachment 370331
[details]
Patch
Wenson Hsieh
Comment 2
2019-05-21 12:52:45 PDT
Created
attachment 370335
[details]
Patch
WebKit Commit Bot
Comment 3
2019-05-21 14:54:11 PDT
Comment on
attachment 370335
[details]
Patch Clearing flags on attachment: 370335 Committed
r245595
: <
https://trac.webkit.org/changeset/245595
>
WebKit Commit Bot
Comment 4
2019-05-21 14:54:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug